feat: filter parameter in submissions api and SubmissionInfo ws `detail` fix
